--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cffi==1.2.1
 characteristic==14.3.0
 cryptography==1.0
 cssselect==0.9.1
+dj-database-url==0.3.0
 Django==1.8.4
 django-bootstrap3==6.2.2
 django-celery==3.1.16
@@ -15,6 +16,7 @@ idna==2.0
 ipaddress==1.0.14
 kombu==3.0.26
 lxml==3.4.4
+psycopg2==2.6.1
 pyasn1==0.1.8
 pyasn1-modules==0.0.7
 pycparser==2.14
