--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-bootstrap3==6.2.2
 django-celery==3.1.16
 django-kombu==0.9.4
 enum34==1.0.4
+gunicorn==19.3.0
 idna==2.0
 ipaddress==1.0.14
 kombu==3.0.26
