--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cffi==1.2.1
 characteristic==14.3.0
 cryptography==1.0
 cssselect==0.9.1
+decorator==4.0.2
 dj-database-url==0.3.0
 dj-static==0.0.6
 Django==1.8.4
@@ -16,8 +17,13 @@ enum34==1.0.4
 gunicorn==19.3.0
 idna==2.0
 ipaddress==1.0.14
+ipython==4.0.0
+ipython-genutils==0.1.0
 kombu==3.0.26
 lxml==3.4.4
+path.py==8.1
+pexpect==3.3
+pickleshare==0.5
 psycopg2==2.6.1
 pyasn1==0.1.8
 pyasn1-modules==0.0.7
@@ -28,8 +34,10 @@ queuelib==1.3.0
 Scrapy==1.0.3
 scrapy-djangoitem==1.0.0
 service-identity==14.0.0
+simplegeneric==0.8.1
 six==1.9.0
 static3==0.6.1
+traitlets==4.0.0
 Twisted==15.3.0
 Unipath==1.1
 w3lib==1.12.0
